--- a/client/resources/css/design.css
+++ b/client/resources/css/design.css
@@ -7698,21 +7698,25 @@ ul.x-tab-strip li .x-tab-right .x-tab-left .x-tab-strip-inner .x-tree-node-el .x
   margin: -9px -9px 0 9px;
   /* pulling it to the top and the right to be able to create a larger click area */
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-/* line 72, ../scss/components/_preview_panel.scss */
+/* line 76, ../scss/components/_preview_panel.scss */
 .preview-header-collapse-minus {
   /* when setting the background position, remember we pulled the image to the top and the right */
   background-position: 2px -39px;
 }
 
-/* line 77, ../scss/components/_preview_panel.scss */
+/* line 81, ../scss/components/_preview_panel.scss */
 .preview-header-collapse-plus {
   /* when setting the background position, remember we pulled the image to the top and the right */
   background-position: 2px 9px;
 }
 
-/* line 83, ../scss/components/_preview_panel.scss */
+/* line 87, ../scss/components/_preview_panel.scss */
 .preview-header-titlebox,
 .preview-header-title .preview-title {
   font-size: 15px !important;
@@ -7723,35 +7727,35 @@ ul.x-tab-strip li .x-tab-right .x-tab-left .x-tab-strip-inner .x-tree-node-el .x
 }
 
 /* Subject field */
-/* line 92, ../scss/components/_preview_panel.scss */
+/* line 96, ../scss/components/_preview_panel.scss */
 .preview-header-title .preview-title {
   font-weight: bold;
 }
 
-/* line 96, ../scss/components/_preview_panel.scss */
+/* line 100, ../scss/components/_preview_panel.scss */
 .preview-header-titlebox {
   padding: 8px 0;
 }
 
-/* line 99, ../scss/components/_preview_panel.scss */
+/* line 103, ../scss/components/_preview_panel.scss */
 .preview-header-senderbox .preview-from {
   display: block;
   padding-bottom: 6px;
 }
 
-/* line 103, ../scss/components/_preview_panel.scss */
+/* line 107, ../scss/components/_preview_panel.scss */
 .preview-header-recipients, .preview-header-meeting, .preview-header-attachments {
   display: block;
   margin-top: 6px;
 }
 
-/* line 109, ../scss/components/_preview_panel.scss */
+/* line 113, ../scss/components/_preview_panel.scss */
 .preview-header-recipients .preview-recipient-title,
 .preview-header-attachments .preview-attachment-title {
   float: left;
 }
 
-/* line 116, ../scss/components/_preview_panel.scss */
+/* line 120, ../scss/components/_preview_panel.scss */
 .preview-header-sentinfo .preview-timestamp-title,
 .preview-header-recipients .preview-recipient-title,
 .preview-header-attachments .preview-attachment-title,
@@ -7764,39 +7768,39 @@ ul.x-tab-strip li .x-tab-right .x-tab-left .x-tab-strip-inner .x-tree-node-el .x
   padding-right: 6px;
 }
 
-/* line 128, ../scss/components/_preview_panel.scss */
+/* line 132, ../scss/components/_preview_panel.scss */
 .preview-recipient-data {
   line-height: 16px;
 }
 
-/* line 132, ../scss/components/_preview_panel.scss */
+/* line 136, ../scss/components/_preview_panel.scss */
 .preview-body {
   padding: 0;
 }
 
 /* Overflow for recipients / attachments */
-/* line 137, ../scss/components/_preview_panel.scss */
+/* line 141, ../scss/components/_preview_panel.scss */
 .preview-header-recipients .preview-recipient-data,
 .preview-header-attachments .preview-attachment-data {
   overflow-y: auto;
 }
 
 /* Attachments: */
-/* line 144, ../scss/components/_preview_panel.scss */
+/* line 148, ../scss/components/_preview_panel.scss */
 .preview-header-attachmentbox {
   line-height: 18px;
   padding-top: 2px;
 }
 
 /* Force width/height of iframe to be 100% so the content fits the iframe */
-/* line 151, ../scss/components/_preview_panel.scss */
+/* line 155, ../scss/components/_preview_panel.scss */
 .preview-iframe {
   height: 100%;
   width: 100%;
 }
 
 /* Top header infobox  */
-/* line 157, ../scss/components/_preview_panel.scss */
+/* line 161, ../scss/components/_preview_panel.scss */
 .preview-header-extrainfobox {
   background-color: #D2E0F0;
   color: #000000;
@@ -7804,41 +7808,41 @@ ul.x-tab-strip li .x-tab-right .x-tab-left .x-tab-strip-inner .x-tree-node-el .x
 }
 
 /* Corrupt message case */
-/* line 165, ../scss/components/_preview_panel.scss */
+/* line 169, ../scss/components/_preview_panel.scss */
 .preview-header-extrainfobox-item-over {
   background-color: #FFBD69;
   cursor: pointer;
 }
 
-/* line 171, ../scss/components/_preview_panel.scss */
+/* line 175, ../scss/components/_preview_panel.scss */
 .preview-header-extrainfobox-item {
   padding: 0px 8px;
   color: #15428B;
 }
 
 /* Preview header email address */
-/* line 178, ../scss/components/_preview_panel.scss */
+/* line 182, ../scss/components/_preview_panel.scss */
 span.zarafa-emailaddress-link {
   cursor: pointer;
 }
 
-/* line 182, ../scss/components/_preview_panel.scss */
+/* line 186, ../scss/components/_preview_panel.scss */
 span.zarafa-emailaddress-link:hover {
   color: #0000FF;
   text-decoration: underline;
 }
 
-/* line 188, ../scss/components/_preview_panel.scss */
+/* line 192, ../scss/components/_preview_panel.scss */
 .preview-title-hr {
   margin: 2px 0;
 }
 
-/* line 192, ../scss/components/_preview_panel.scss */
+/* line 196, ../scss/components/_preview_panel.scss */
 .preview-recipient-data {
   word-wrap: break-word;
 }
 
-/* line 196, ../scss/components/_preview_panel.scss */
+/* line 200, ../scss/components/_preview_panel.scss */
 .preview-header-attachments .zarafa-attachment-link {
   border-radius: 4px;
   border: 1px solid #d3d2d2;
@@ -7850,7 +7854,7 @@ span.zarafa-emailaddress-link:hover {
   cursor: pointer;
 }
 
-/* line 209, ../scss/components/_preview_panel.scss */
+/* line 213, ../scss/components/_preview_panel.scss */
 .preview-header-attachments .zarafa-attachment-link-over {
   background-color: #ddd;
 }
