--- a/client/resources/scss/external/login.scss
+++ b/client/resources/scss/external/login.scss
@@ -1,7 +1,7 @@
 /* import the base */
 @import 'base/_colors';
-
 @import 'base/_sizes';
+@import 'base/_fonts';
 
 /* The animation for the spinner */
 @keyframes rotate {
@@ -193,6 +193,55 @@ body.login > #form-container {
 	#submitbutton:focus {
 		box-shadow: 0 0 0 1px $white inset;
 	}
+}
+
+#oidc-error-msgBox {
+  margin: 0px auto;
+  width: 30%;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  position: relative;
+  top: 10px;
+  font-size: 14px;
+  box-shadow: 0px 0px 10px 1px #9f9f9f;
+
+  .oidc-msg-container {
+    .title {
+      font-size: $font-size-extra-large;
+      font-weight: bold;
+      padding: $padding-extra-large;
+    }
+
+    .body {
+      padding: $padding-extra-large;
+    }
+
+    .button-container {
+      padding: 5px;
+      display: flex;
+      justify-content: flex-end;
+
+      .btn {
+        background: $kopano-blue;
+        color: white;
+        line-height: $button-small-height;
+        border: 1px solid transparent;
+        padding: 0 $padding-large;
+        margin: 5px;
+        cursor: pointer;
+        box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.35);
+      }
+      .btn:hover {
+        background-color: $kopano-blue-hover;
+      }
+      .btn:click {
+        background-color: $kopano-blue-active;
+      }
+      .btn:focus {
+        box-shadow: 0 0 0 1px $white inset;
+      }
+    }
+  }
 }
 
 /* IE10 and IE11 don't support filters, so we load a blurred copy of the background image
