--- a/client/resources/scss/external/login.scss
+++ b/client/resources/scss/external/login.scss
@@ -195,6 +195,49 @@ body.login > #form-container {
 	}
 }
 
+// Interactive login page.
+body.login > .container {
+	height: inherit;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.form-container{
+		background-color: #fff;
+		padding: 20px;
+		width: 400px;
+		height: 350px;
+		box-shadow: #000 1px 7px 14px 0px;
+		border-radius: 3px;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		flex-flow: column;
+
+		#logo {
+			background: url(../../images/kopano-webapp-icon.svg) no-repeat center;
+			width: 100%;
+			height: 150px;
+		}
+
+		#signin-btn{
+			padding: 10px;
+			outline: none;
+			border: 1px solid $grey5;
+			border-radius: 3px;
+			background-color: white;
+			font-size: 14px;
+			font-family: sans-serif;
+			cursor: pointer;
+		}
+
+		#signin-btn:hover{
+			box-shadow: 1px 3px 7px -1px $grey6;
+		}
+	}
+
+}
+
 #oidc-error-msgBox {
   margin: 0px auto;
   width: 30%;
