--- a/client/zarafa/core/themes/lime/css/themelime.css
+++ b/client/zarafa/core/themes/lime/css/themelime.css
@@ -387,3 +387,7 @@ input.x-form-text.x-form-field.x-form-focus {
 .x-grid3-row .k-conversation-count {
 	color: #6da208;
 }
+
+.preview-header-sender-initial {
+  color: #82ba00;
+}
