--- a/client/zarafa/core/themes/purple/css/themepurple.css
+++ b/client/zarafa/core/themes/purple/css/themepurple.css
@@ -532,3 +532,7 @@ input.x-form-text.x-form-field.x-form-focus {
 .x-grid3-row .k-conversation-count {
 	color: #702277;
 }
+
+.preview-header-sender-initial {
+  color: #490e67;
+}
