--- a/client/zarafa/core/themes/orange/css/themeorange.css
+++ b/client/zarafa/core/themes/orange/css/themeorange.css
@@ -387,3 +387,7 @@ input.x-form-text.x-form-field.x-form-focus {
 .x-grid3-row .k-conversation-count {
 	color: #dc7100;
 }
+
+.preview-header-sender-initial {
+  color: #ec8354;
+}
