KW-1133-replace-of-with-for-shared-folder-titles-in-hierarchy
    - Replace 'of' by '-' in getFullyQualifiedDisplayName function.
    - Display folder owner name for shared and public store except for mail context when "Show all folders" is unchecked.
    - Adjust padding
    - Remove padding-right from text node and counter node.
    - Add padding-left to counter node and adjust it according to counter's avaibility.

Reference KW-1133

--- a/client/resources/scss/components/_hierarchy.scss
+++ b/client/resources/scss/components/_hierarchy.scss
@@ -136,6 +136,17 @@ Note: Does not work in IE11 */
 .zarafa-hierarchy-node-unread-count span.zarafa-hierarchy-node-counter {
 	color: $kopano-blue;
 }
+span.zarafa-hierarchy-node-counter {
+	padding-right: 0px !important;
+	padding-left: $padding-small !important;
+}
+span.zarafa-hierarchy-node-nopadding {
+	padding: 0 !important;
+}
+span.zarafa-hierarchy-node-foldername {
+	padding-right: 0px !important;
+}
+
 .zarafa-hierarchy-node-owner {
   font-weight: normal;
   color: $grey6 !important;
