--- a/client/zarafa/core/themes/highcontrast/css/themehighcontrast.css
+++ b/client/zarafa/core/themes/highcontrast/css/themehighcontrast.css
@@ -245,6 +245,7 @@ ul.x-tab-strip li .x-tab-right,
  */
 .contact-characterstrip .x-btn-pressed .x-btn-small {
   background-color: #b9dcf5;
+  border-color: #b9dcf5;
 }
 
 .k-selection {
