--- a/client/resources/scss/components/_contacts.scss
+++ b/client/resources/scss/components/_contacts.scss
@@ -1,83 +1,104 @@
-/* Business card view */
-div.zarafa-contact-cardview-selected {
-	 background-color : $light-blue;
-}
+#contact-cardview {
 
-.zarafa-contact-cardview {
 	height: 100%;
 	width: 100%;
-}
 
-.zarafa-card-body table {
-	border-collapse: collapse;
-}
-
-.zarafa-card-body table tr td.contact-card-label {
-	font-style: italic;
-	padding-right: 3px;
-	color: $grey6;
-}
-
-.zarafa-contact-cardview-card {
-	border: 1px solid transparent;
-	padding: 5px;
-	width: 300px;
-	float: left;
-	background-color : transparent;
-}
-
-.zarafa-contact-cardview-card .x-panel {
-	box-shadow:0px 1px 4px rgba(0,0,0,0.4);
-	overflow:hidden;
-}
-
-.zarafa-contact-cardview-card .x-panel .x-panel-tl {
-	background-color:#f0f0f0;
-}
-
-.zarafa-contact-cardview-contact-card {
-	width : 45px;
-	height : 125px;
-	float : left;
-}
-
-.zarafa-contact-cardview-card .x-panel-header {
-	background-color: none;
-	border-color: none;
-}
-
-.zarafa-contact-cardview-card .x-panel-header-text {
-	font-size:1.1em;
-}
-
-.zarafa-contact-cardview-card-title {
-	padding: 5px;
-}
-
-.zarafa-contact-cardview-distlist-card {
-	width : 80px;
-	height : 125px;
-	float : left;
-}
-
-/* Body of contact cardview */
-.zarafa-card-body {
-	background-color: white !important;
-	border: none;
-	font-weight: normal;
-	padding-bottom: 5px;
-}
-
-.k-recipient-card-view {
-	.x-window-footer {
-		border-top: 1px solid $grey;
+	/* Selected business card */
+	div.zarafa-contact-cardview-card-selected {
+		box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	}
 
-	.x-panel-btns {
-		padding: 0px !important;
-	}
-}
+	.zarafa-contact-cardview-card {
 
-.contact-characterstrip .x-btn-pressed .x-btn-small {
-	background-color: $grid-active-color;
+		border: 1px solid $grey;
+		margin: 5px;
+		width: 300px;
+		height: 150px;
+		float: left;
+		overflow: hidden;
+
+		.x-panel .x-panel-header, .x-panel-tc {
+			background-color: $white;
+		}
+
+		.x-panel-header-text {
+			font-size: $font-size-large;
+			font-weight: bold;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display: inline-block;
+			max-width: 280px;
+			white-space: nowrap;
+			color: $dark-grey;
+			height: 20px;
+		}
+		
+		 /* Body of contact cardview */
+		.zarafa-card-body, .x-panel .x-panel-header {
+			border: none;
+			padding-left: 10px;
+		}
+
+		.x-panel-header {
+			padding-top: 10px;
+		}
+
+		.zarafa-card-body {
+			max-width: 175px;
+			float: left;
+
+			table {
+				border-spacing: 0;
+			}
+
+			p {
+				overflow: hidden;	
+				text-overflow: ellipsis;
+				display: block;
+				white-space: nowrap;
+				max-width: 175px;
+				color: $dark-grey;
+			}
+		}
+		
+		/* Initials */
+		.k-contact-cardview-initials {
+			width: 76px;
+			height: 76px;
+			float: right;
+			border: 1px solid;
+			color: $kopano-blue;
+			border-radius: 50%;
+			line-height: 73px;
+			margin-right: 20px;
+			text-align: center;
+			font-size: 48px !important;
+			user-select: none;
+		}
+	}
+	
+	/* Buttons to switched between contacts */
+	.contact-characterstrip {
+
+		margin: $padding-small 0 0 (-$padding-small);
+
+		button {
+			min-width: 35px;
+		}
+	
+		.x-btn .x-btn-small {
+			box-shadow: none;
+			background: none;
+			border: 1px solid $grey;
+		}
+
+		.x-btn-over .x-btn-small {
+			background-color: WhiteSmoke;
+		}
+
+		.x-btn-pressed .x-btn-small {
+			background-color: $grid-active-color;
+			border-color: $grid-active-color;
+		}
+	}
 }
