--- a/client/zarafa/core/themes/lime/css/themelime.css
+++ b/client/zarafa/core/themes/lime/css/themelime.css
@@ -356,6 +356,7 @@ input.x-form-text.x-form-field.x-form-focus {
  */
 .contact-characterstrip .x-btn-pressed .x-btn-small {
   background-color: #e1f5b2;
+  border-color: #e1f5b2;
 }
 
 .k-selection {
