--- a/client/zarafa/core/themes/orange/css/themeorange.css
+++ b/client/zarafa/core/themes/orange/css/themeorange.css
@@ -356,6 +356,7 @@ input.x-form-text.x-form-field.x-form-focus {
  */
 .contact-characterstrip .x-btn-pressed .x-btn-small {
   background-color: #fce8ce;
+  border-color: #fce8ce;
 }
 
 .k-selection {
