Make initials unselectable
Reference : KW-2859

--- a/client/resources/scss/components/_preview_panel.scss
+++ b/client/resources/scss/components/_preview_panel.scss
@@ -184,6 +184,7 @@ $preview-header-collapse-icon-height	: 5;
 	font-size: 18px !important;
 	@include basefont($font-size-extra-large);
 	float: left;
+	user-select: none;
 }
 
 .preview-body {
