Smaller font for contact card initials

--- a/client/resources/scss/components/_contacts.scss
+++ b/client/resources/scss/components/_contacts.scss
@@ -72,7 +72,7 @@
 			line-height: 73px;
 			margin-right: 20px;
 			text-align: center;
-			font-size: 48px !important;
+			font-size: 30px;
 			user-select: none;
 		}
 	}
