KW-2379-show-gab-contact-images-in-mail-header
    - Add php dependancy in readme.
    - Add user image related style in _preview_panel.scss
    - Improve template for desplaying user image in SentInfoLinks and RecipientHoverCardView
    - Fetch user image when message is opened.
    - Add a function to get and compress image in Operations
    - Scss change to make appearance simmilar to initials.
    - Change property type of  PR_EMS_AB_THUMBNAIL_PHOTO
    - Use PR_EMS_AB_THUMBNAIL_PHOTO instead of 0x8C9E0102 in all the places.

Reference KW-2379

--- a/client/resources/scss/components/_popups.scss
+++ b/client/resources/scss/components/_popups.scss
@@ -476,6 +476,11 @@
 		line-height: 55px;
 		font-size: 24px !important;
 	}
+
+	.preview-header-sender-image {
+		min-height : 55px;
+		width: 55px;
+	}
 	
 	/* Display name */
 	.x-form-display-field.x-form-item.x-box-item {
