Remove firefox orange border in input field

--- a/client/resources/scss/components/_formelements.scss
+++ b/client/resources/scss/components/_formelements.scss
@@ -3,6 +3,11 @@ body.Safari input[type="radio"] {
 	margin-left: 1px;
 }
 
+/* Firefox hack for orange border around input fields */
+body.Firefox input:required {
+    box-shadow: none;
+}
+
 .x-form-item {
 	margin-bottom: $padding-small;
 }
