--- a/client/resources/scss/components/_settings.scss
+++ b/client/resources/scss/components/_settings.scss
@@ -167,8 +167,7 @@
 }
 
 /* Settings icons in the settingstab */
-.zarafa-settings-category-tab, .zarafa-settings-favorite-tab
-{
+.zarafa-settings-category-tab, .zarafa-settings-favorite-tab {
 	background-position: 2px center;
 	background-repeat: no-repeat;
 }
@@ -176,23 +175,22 @@
 .zarafa-settings-signatures {
 	margin-right: $padding-large;
 
- 	.x-grid3-row {
- 		border-top: 1px solid $grey;
- 		margin-bottom: -1px;
-	 }
- }
+	.x-panel-body-noheader {
+		border-top: none;
+	}
+}
 
- .k-signature-name, .zarafa-settings-oof-subject input {
+.k-signature-name, .zarafa-settings-oof-subject input {
 	padding: $padding-medium $padding-medium $padding-medium 2*$padding-medium;
 	font-size: $font-size-large !important;
- }
+}
 	
- .k-signature-editor textarea {
+.k-signature-editor textarea {
 	padding: $padding-extra-large;
 	font-family: monospace !important;
- }
+}
 
-.k-signature-editor{
+.k-signature-editor {
 	.mce-panel.mce-tinymce {
 		width: auto !important;
 	}
@@ -210,17 +208,19 @@
 }
 
 /* Out of office Category */
-.zarafa-settings-oof-invalid
-{
-	color: $red ;
+.zarafa-settings-oof-invalid {
+	color: $red;
 }
+
 .zarafa-settings-oof-table-cellalign {
 	text-align: right;
 }
+
 .zarafa-settings-oof-table-cellpadding {
 	padding: $padding-medium $padding-medium $padding-medium 0;
 }
-.zarafa-settings-oof-subject .label-subject{
+
+.zarafa-settings-oof-subject .label-subject {
 	line-height: $button-small-height;
 	padding-right: $padding-medium;
 }
