KW-682 include tinymce styling in signature element

--- a/client/resources/scss/components/_tinymce.scss
+++ b/client/resources/scss/components/_tinymce.scss
@@ -1,4 +1,5 @@
-.zarafa-mailcreatepanel-field-editor  {
+.zarafa-mailcreatepanel-field-editor,
+.k-signature-editor  {
 	/* Remove skin creator's dark grey border-color */
 	.mce-btn.mce-active,.mce-btn.mce-active:hover {
 		border-color: #ebebeb;
