KW-3639-filter-search-folder-list
    - Configure tree filter in settingsTreePanel
    - Set styling for settings search field as well as hierarchy search field
    - Handle hierarchy search field resize width
    - Created a User setting for disabling the hierarchy search field
    - Add cascade function in FolderNode
    - Add treeFilter class in common/ui and extend it in hierarchy/ui
    - Align "show all" text with the checkbox
    - Handle search text field clear on context switch
    - Pass value of previously active hierarchy search field to currently active hierarchy search field on "Show all" toggle

Reference KW-3639

--- a/client/resources/scss/components/_hierarchy.scss
+++ b/client/resources/scss/components/_hierarchy.scss
@@ -15,16 +15,10 @@ body.scrollFavorites .zarafa-tree-ipm-subtree-favorites-container, .x-window .za
 		/* Bottom has -1 pixel since we have a bottom-border of 1px */
 		padding: ($toolbar-height - $font-default-line-height)/2 + 1 $padding-extra-large (($toolbar-height - $font-default-line-height)/2 - 1) $padding-extra-large;
 
-		.x-form-check-wrap{
-
-			input, label{
-				line-height: $font-default-line-height;
-				vertical-align: middle;
-			}
-		}
-
 		.x-form-item {
 			margin-bottom: 0;
+			display: flex;
+			align-items: center;
 		}
 	}
 }
@@ -128,7 +122,9 @@ Note: Does not work in IE11 */
 	padding: 0 0 0 0;
 	margin: 0 0 0 0;
 }
-
+.k-searchfolder-field {
+	padding: 0 5px 0 !important;
+}
 /* counters */
 .zarafa-hierarchy-node-total-count span.zarafa-hierarchy-node-counter {
 	color: $green-hover;
