--- a/client/resources/scss/components/_settings.scss
+++ b/client/resources/scss/components/_settings.scss
@@ -152,6 +152,14 @@
 			}
 		}
 
+		/* Advanced category */
+		.k-settings-category-advanced-container {
+			.k-settings-search-field {
+				height: 30px !important;
+				font-size: medium;
+			}
+		}
+
 	}
 }
 
