--- a/client/resources/scss/base/_layout.scss
+++ b/client/resources/scss/base/_layout.scss
@@ -16,7 +16,7 @@ body {
 }
 
 .x-panel-body {
-	background-color: white !important;
+	background-color: $white !important;
 }
 
 #zarafa-navigationpanel > div {
