--- a/client/resources/scss/components/_loading_mask.scss
+++ b/client/resources/scss/components/_loading_mask.scss
@@ -5,7 +5,7 @@
 	border-color:#d3d2d2;
 }
 .x-mask-row {
-	background-color:#ffffff;
+	background-color:$white;
 }
 .x-mask-loading > div {
 	border-color:#d3d2d2;
