--- a/client/resources/scss/components/_notifications.scss
+++ b/client/resources/scss/components/_notifications.scss
@@ -6,7 +6,7 @@
 	text-align : left;
 	display: table;
 	width: 100%;
-	box-shadow : 0 1px 1px white;
+	box-shadow : 0 1px 1px $white;
 	border-style : solid;
 	border-color : #ccc;
 
