--- a/client/resources/scss/components/_search.scss
+++ b/client/resources/scss/components/_search.scss
@@ -36,7 +36,7 @@
 		}
 
 		td:first-child:hover .x-grid3-hd-inner {
-			border-color: #ffffff;
+			border-color: $white;
 		}
 
 		.zarafa-search-suggestion {
