--- a/client/resources/scss/components/_buttons.scss
+++ b/client/resources/scss/components/_buttons.scss
@@ -130,7 +130,7 @@ $normal-button-bgcolor-hover		: $grey2;
 			padding-right: 12px;
 
 			button {
-				border-right: 1px solid white;
+				border-right: 1px solid $white;
 			}
 		}
 	}
@@ -141,7 +141,7 @@ $normal-button-bgcolor-hover		: $grey2;
 
 			button {
 				border: none;
-				border-right: 1px solid white;
+				border-right: 1px solid $white;
 			}
 		}
 	}
@@ -153,7 +153,7 @@ $normal-button-bgcolor-hover		: $grey2;
 
 			button {
 				border: none;
-				border-right: 1px solid white;
+				border-right: 1px solid $white;
 			}
 		}
 	}
@@ -339,7 +339,7 @@ $normal-button-bgcolor-hover		: $grey2;
 
 
 .x-window {
-	
+
 	.k-recipient-hover-card-button {
 		.x-btn-small {
 			background-color: transparent !important;
