--- a/client/resources/scss/components/_tinymce.scss
+++ b/client/resources/scss/components/_tinymce.scss
@@ -64,7 +64,7 @@
 
 .mce-arrow.mce-arrow-down:after {
 	bottom: -8px;
-	border-top-color: #ffffff;
+	border-top-color: $white;
 	border-width: 8px 8px 0;
 	margin-left: -8px;
 }
