--- a/client/resources/scss/external/configcheck.scss
+++ b/client/resources/scss/external/configcheck.scss
@@ -1,3 +1,5 @@
+@import 'base/_colors';
+
 p,
 h1,
 h2,
@@ -19,12 +21,12 @@ body {
 	:after {
 		content: '';
 		position: absolute;
-		top: 0; 
+		top: 0;
 		bottom: 0;
 		left: 0;
 		right: 0;
 		margin: 0;
-		padding: 0; 
+		padding: 0;
 		background: url('../../images/background.svg') center/cover no-repeat;
 		z-index: -1;
 	}
@@ -33,12 +35,12 @@ body {
 		width: 50%;
 		margin: auto;
 		margin-top: 5%;
-		background-color: white;
+		background-color: $white;
 		box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.20);
 
 		.header {
 			background-color: #c0392b;
-			color: white;
+			color: $white;
 			height: 15%;
 			display: flex;
 			justify-content: center;
