KW-2924 improve print layout

--- a/client/resources/scss/base/_colors.scss
+++ b/client/resources/scss/base/_colors.scss
@@ -15,6 +15,7 @@ $grey4                    : #f2f2f2;
 $grey5                    : #b6b6b6;
 $grey6                    : #777777;
 $grey7                    : #4c4c4c;
+$lightgrey                : lightgrey;
 
 $dark-grey                : #333333;
 $dark-grey2               : #222222;
@@ -25,6 +26,7 @@ $green-hover              : #59b147;
 $green-bright             : #23cb02;
 
 $white                    : #ffffff;
+$whiteSmoke               : whiteSmoke;
 $black                    : #000000;
 $red                      : #FF0000;
 $red1                     : #e30022;
