--- a/client/resources/scss/external/print.record.scss
+++ b/client/resources/scss/external/print.record.scss
@@ -4,7 +4,7 @@ table {
   width: 100%;
   text-align: left;
   font-size: 11px;
-  font-family: arial;
+  font-family: arial, tahoma, helvetica, sans-serif;
   border-collapse: collapse;
 }
 
